--- a/MyFristTP/Views/Shared/_Layout.cshtml
+++ b/MyFristTP/Views/Shared/_Layout.cshtml
@@ -24,13 +24,14 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home"
-                                asp-action="Privacy">Privacy</a>
-                        </li>
+
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Movie"
-                                asp-action="Index">Movie</a>
+                                asp-action="Index">Movies</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Customer"
+                                asp-action="Index">Customers</a>
                         </li>
                     </ul>
                 </div>
