--- a/MyFristTP/Views/Customer/Index.cshtml
+++ b/MyFristTP/Views/Customer/Index.cshtml
@@ -20,7 +20,7 @@
             <tr>
                 <td>@customer.Id</td>
                 <td>
-                    <a href="/customer/CustomerDetails/@customer.Id">@customer.Name</a>
+                    <a href="/customer/Details/@customer.Id">@customer.Name</a>
                 </td>
                 <td>@customer.Email</td>
                 <td>@customer.PhoneNumber</td>
