add relation movie genre

--- a/TP2/Views/Genre/index.cshtml
+++ b/TP2/Views/Genre/index.cshtml
@@ -10,7 +10,7 @@
     <a class="btn btn-primary" asp-controller="Genre" asp-action="Create">Add New Genre</a>
 </p>
 
-<table class="Genre">
+<table class="table">
     <thead>
         <tr>
             <th>Id</th>
