--- a/TP2/Views/Movie/Create.cshtml
+++ b/TP2/Views/Movie/Create.cshtml
@@ -5,18 +5,23 @@
 }
 
 <h2>Create Movie</h2>
-
 <h4>Movie</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
-
+            <div class="form-group">
+                <label asp-for="GenreId" class="control-label"></label>
+                <select asp-for="GenreId" class="form-control" asp-items="ViewBag.Genres"></select>
+                <span asp-validation-for="GenreId" class="text-danger"></span>
+            </div>
+            </br>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
@@ -24,6 +29,7 @@
     </div>
 </div>
 
+</br>
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
