--- a/TP2/Views/Movie/Edit.cshtml
+++ b/TP2/Views/Movie/Edit.cshtml
@@ -7,10 +7,16 @@
 <h2>Edit Movie</h2>
 
 <form asp-action="edit">
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <div class="form-group">
         <label asp-for="Name"></label>
         <input asp-for="Name" class="form-control" />
         <span asp-validation-for="Name" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="GenreId" class="control-label"></label>
+        <select asp-for="GenreId" class="form-control" asp-items="ViewBag.Genres"></select>
+        <span asp-validation-for="GenreId" class="text-danger"></span>
     </div>
     <input type="hidden" asp-for="Id" />
     </br>
