--- a/TP3/Views/Customer/Index.cshtml
+++ b/TP3/Views/Customer/Index.cshtml
@@ -1,10 +1,10 @@
 @model IEnumerable<TP3.Models.Customer>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Customer List";
 }
 
-<h2>Index</h2>
+<h2>Customer List</h2>
 
 <p>
     <a asp-action="Create" class="btn btn-primary">Create New</a>
@@ -14,7 +14,9 @@
     <thead>
         <tr>
             <th>Name</th>
-            <th>DiscountRate</th>
+            <th>Discount Rate</th>
+            <th>Membership Type</th>
+            <th>Movies</th>
             <th></th>
         </tr>
     </thead>
@@ -23,11 +25,17 @@
         {
             <tr>
                 <td>@customer.Name</td>
-                <td>@customer.Membershiptype?.DiscountRate ?? 0</td> <!-- Affiche DiscountRate si disponible -->
+                <td>@customer.Membershiptype?.DiscountRate</td>  <!-- Access DiscountRate from Membershiptype -->
                 <td>
-                    <a asp-action="Edit" asp-route-id="@customer.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@customer.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@customer.Id">Delete</a>
+                    @foreach (var movie in customer.Movies)
+                    {
+                        <span>@movie.Name</span><br />
+                    }
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@customer.Id" class="btn btn-warning">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@customer.Id" class="btn btn-info">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@customer.Id" class="btn btn-danger">Delete</a>
                 </td>
             </tr>
         }
